--- a/Example .env
+++ b/Example .env
@@ -4,3 +4,4 @@ PERSON1 = 'PERSON 1 EMAIL HERE'
 PERSON2 = 'PERSON 2 EMAIL HERE'
 PERSON3 = 'PERSON 3 EMAIL HERE'
 GPT = 'CHAT GPT KEY HERE'
+USERNAME = 'USERNAME HERE'
